# ComputerDataBase

./: .gitignore  CMakeLists.txt  README.md  interface.ui  main.cpp  res.qrc  sort.cpp  sort.h  themes.cpp  themes.h  window.cpp  window.h
